syntax = "proto3";
package com.oracle.infy.wookiee.grpc.srcgen.testService;
import "importedTestService.proto";

message GrpcASError {
  oneof OneOf {
    GrpcDestinationError destinationError = 1;
    GrpcConnectionError connectionError = 2;
  }
}


message GrpcDestinationError {
  oneof OneOf {
    GrpcMaxyDestinationValidationError maxyDestinationValidationError = 1;
    GrpcMaxyConnectionValidationError maxyConnectionValidationError = 2;
  }
}


message GrpcConnectionError {
  oneof OneOf {
    GrpcMaxyConnectionValidationError maxyConnectionValidationError = 1;
  }
}


message GrpcFoo {
}


message GrpcTest{
  repeated string name = 1;
  repeated GrpcFoo foo = 2;
  map<string, string> bar = 3;
  map<string, GrpcFoo> baz = 4;
  GrpcMaybeListString opt0 = 5;
}


message GrpcPerson{
  string name = 1;
  int32 age = 2;
  GrpcMaybeMaybeString optOpt = 3;
  GrpcMaybeTest opt3 = 4;
}


message GrpcMaxyDestinationValidationError{
  int32 code = 1;
  string maxyError = 2;
  GrpcPerson person = 3;
  GrpcMaybeString details = 4;
}


message GrpcMaxyConnectionValidationError{
  int32 code = 1;
  string maxyError = 2;
  GrpcPerson person = 3;
}


message GrpcMyTrait {
  oneof OneOf {
    GrpcMyClass myClass = 1;
  }
}


message GrpcMyClass {
}


message GrpcMaybeListString {
  oneof OneOf {
    GrpcListString somme = 1;
    GrpcNonne nonne = 2;
  }
}


message GrpcMaybeMaybeString {
  oneof OneOf {
    GrpcMaybeString somme = 1;
    GrpcNonne nonne = 2;
  }
}


message GrpcNonne {
}


message GrpcMaybeString {
  oneof OneOf {
    string somme = 1;
    GrpcNonne nonne = 2;
  }
}


message GrpcMaybeTest {
  oneof OneOf {
    GrpcTest somme = 1;
    GrpcNonne nonne = 2;
  }
}


message GrpcListString{
  repeated string list = 1;
}


service TestService {
  rpc test(GrpcPerson) returns (GrpcPerson) {}
}
